# crossover

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  clang_format.sh  compile_flags.txt  crossover
assets/scenes/: test.xos
assets/shaders/: circle.frag  circle.vert  color.frag  light_mask.frag  material.frag  plane_color.frag  primitive.frag  primitive.vert  screen_rect.vert
assets/shaders.bck/: color.frag  light_mask.frag  primitive.frag  primitive.vert
demo/: demo.xproj
demo/scenes/: polygons.xscene
dependencies/glad/: glad.c
src/: CMakeLists.txt  app.c  app.h  array.h  asset.h  brain.c  brain.h  camera.c  camera.h  collision.c  collision.h  component.h  const.h  debug.c  debug.h  draw.c  draw.h  editor.h  genetic_training.h  gl.c  gl.h  glad.c  gun.c  gun.h  guy.c  guy.h  hashmap.h  health.c  health.h  kinematic.c  kinematic.h  main.c  material.c  material.h  math.c  math.h  movement.c  movement.h  nfd_utils.c  nfd_utils.h  (+25 more)
src/asset/: asset.c  brain.c  brain.h
src/collision/: collision.c  collision.h
src/component/: brain.c  brain.h  bullet.c  bullet.h  component.c  component.h  controller.c  controller.h  gun.c  gun.h  health.c  health.h  kinematic.c  kinematic.h  kinematic_movement.c  kinematic_movement.h  light.c  light.h  material.c  material.h  primitive.c  primitive.h  rigid_body.c  rigid_body.h  scorer.c  scorer.h  transformation.c  transformation.h  vision.c  vision.h
src/core/: app.c  array.c  debug.c  gl.c  hashmap.c  math.c  profiler.c  ring_buffer.c  scene.c  utils.c
src/debug/: debug.c  debug.h  gui.c  gui.h
src/editor/: brain_editor.c  common.c  common.h  debug_overlay.c  editor.c  entity_picking.c  file_dialog.c  genetic_training.c  gui.c  main_menu_bar.c  profiler.c  scene_editor.c  simulation_editor.c
src/genetic_training/: genetic_training.c
src/renderer/: gl.bck.c  gl.bck.h  gl.c  gl.h  renderer.bck.c  renderer.c
src/system/: bullet_damage.c  camera.c  collision.c  collision.h  controller.c  cursor_picking.c  entity_drag.c  entity_picking.c  health.c  health.h  kinematic.c  kinematic.h  kinematic_movement.c  mouse_picking.c  player.c  player.h  ray_casting.c  rigid_body.c  scorer.c  system.h  ttl.c  ttl.h  vision.c  vision.h
tests/: test_all.c  test_array.c  test_hashmap.c  test_ring_buffer.c  tests.h
